Adding new mock functionality to the application, adding new endpoints, adding mongo support for new schemas
